style.css
html {
    scroll-behavior: smooth;
}
body {
    overflow-x: scroll;
    overflow-y: hidden;
    width: auto;
    max-height: 100vh;
    font-family: "Times New Roman";
    font-size: 21px;
    margin: 0;
}

.loader {
    width: 100vw;
    height: 100vh;
    background-color: white;
    opacity: 1;
    animation: load-animation 2s ease-in 0.5s forwards;
    position: absolute;
    z-index: 2;
}

@keyframes load-animation {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 1;
    }
    100% {
        opacity: 0;
        z-index: -1;
    }
}

#main-story,
#other-story {
    width: fit-content;
    overflow-x: scroll;
    overflow-y: hidden;
    display: flex;
    float: left;
}

.story-wrapper {
    width: calc(30vw - 48px);
    max-width: 480px;
    padding-left: 24px;
    padding-right: 24px;
    height: 100vh;
    overflow-y: scroll;
}
@media screen and (max-width: 768px) {
    .story-wrapper {
        width: calc(45vw - 24px);
    }
}

@media screen and (max-width: 480px) {
    .story-wrapper {
        width: calc(90vw - 24px);
    }
    #main-story{
        position: absolute;
        top: 30vh;
    }
}
button {
    float: left;
}
a {
    text-decoration: none;
    color: inherit;
}
.story-header {
    height: 36px;
    position: absolute;
    width: calc(30vw - 24px);
    max-width: 480px;
    background-color: white;
    padding-top: 16px;
    margin-left: -24px;
    padding-left: 24px;
    color:#382d1b;
}
@media screen and (max-width: 768px) {
    .story-header {
        width: 45vw;
    }
}

@media screen and (max-width: 480px) {
    .story-header {
        width: 90vw;
    }
}
.content {
    margin-top: 72px;
}
.name {
    padding-left: 36px;
}
p.p1 {
    font: 20px "Times New Roman";
    color: #382d1b;
}
p.p2 {
    font: 20px "Times New Roman";
    color: #8f8080;
    min-height: 21px;
    margin: 0;
}
p.p3 {
    margin: 0;
    font: 16px "Times New Roman";
    color: #382d1b;
}
p.p4 {
    margin: 0;
    font: 20px "Times New Roman";
    color: #8f8080;
}
span.s1 {
    color: #8f8080;
}
span.s2 {
    font: 20px "Times New Roman";
    color: #8f8080;
}
span.s3 {
    color: #0000ff;
}
span.s4 {
    font-kerning: none;
}
span.s5 {
    color: #382d1b;
}
span.s6 {
    font: 16px "Times New Roman";
    color: #0000ff;
    cursor: pointer;
}
span.s6:hover {
    color: #ff8200;
}
span.s7 {
    font-kerning: none;
    color: #382d1b;
}

span.Apple-tab-span {
    display: block;
    width: 20px;
    height: 12px;
    float: left;
}

.colored-link {
    color: #0000ff !important;
}

.top{
    top: 0 !important;
}

iframe,
.story-img {
    float: left;
    width: 70vw;
    height: 100vh;
    object-fit: cover;
}

@media screen and (max-width: 768px) {
    .story-img{
        float: none;
        width: 55vw;
        height: auto;
        object-fit: contain;
        position: absolute;
        top: 0;
        left: calc(45vw + 24px);
    }
}

@media screen and (max-width: 480px) {
    .story-img{
        width: 100vw;
        max-height: 30vh;
    }
}

audio {
    width: 30vw;
    left: 0;
    position: absolute;
    top: 48px;
}

.inline-img {
    width: 100%;
}

